# ts-26-05-django

./: README.md  manage.py  pyproject.toml
atv2605/: asgi.py  settings.py  urls.py  wsgi.py
product/: urls.py  views.py
product/templates/: categories_form.html  categories_list.html  index.html  product_form.html  product_list.html
